# create-container-vscode-project

./: LICENSE  README.md
create-container-vscode-project/: Containerfile  Containerfile.develop  Containerfile.release  build.cmd  build.develop.ps1  build.ps1  build.release.ps1  kill.cmd  kill.ps1  start.cmd  start.ps1
create-container-vscode-project/workspace/: README.md  install_local.sh  pyproject.toml  upload_pypi.sh  upload_testpypi.sh
create-container-vscode-project/workspace/src/create_container_vscode_project/: main.py  script.py
