[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/create_container_vscode_project"]

[project.scripts]
ccvp = "create_container_vscode_project.script:main"

[project]
name = "create-container-vscode-project"
version = "0.0.1"
authors = [
  { name="CWKSC" },
]
description = "Create template file by project name"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

