[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/create_container_vscode_project"]

[project.scripts]
ccvp = "create_container_vscode_project.main:main"

[project]
name = "create-container-vscode-project"
version = "0.0.3"
authors = [
  { name="CWKSC" },
]
description = "Create template file by project name"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

